--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -169,13 +169,13 @@ import Layout from '../layouts/Layout.astro';
 			</p>
 			<div class="flex flex-col sm:flex-row gap-4 justify-center">
 				<a 
-					href="/contact" 
+					href="/temporal-page/contact" 
 					class="bg-orange-500 hover:bg-orange-600 text-white font-semibold py-4 px-8 rounded-lg text-lg transition-colors"
 				>
 					Get Started Today
 				</a>
 				<a 
-					href="/services" 
+					href="/temporal-page/services" 
 					class="bg-transparent border-2 border-white hover:bg-white hover:text-blue-900 text-white font-semibold py-4 px-8 rounded-lg text-lg transition-colors"
 				>
 					View Our Services
