--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -208,7 +208,7 @@ import Layout from '../layouts/Layout.astro';
 			</p>
 			<div class="flex flex-col sm:flex-row gap-4 justify-center">
 				<a 
-					href="/contact" 
+					href="/temporal-page/contact" 
 					class="bg-orange-500 hover:bg-orange-600 text-white font-semibold py-4 px-8 rounded-lg text-lg transition-colors"
 				>
 					Get Free Estimate
