--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -32,7 +32,7 @@ const optimizedBackground = await getImage({src: backgroundImage, format: 'jpg'}
 			<div class="flex flex-col sm:flex-row gap-4 justify-center">
 				<a 
 					href="/temporal-page/contact" 
-					class="bg-[#309733] hover:bg-orange-600 text-white font-semibold py-4 px-8 rounded-lg text-lg transition-colors"
+					class="bg-[#309733] hover:bg-[#27752A] text-white font-semibold py-4 px-8 rounded-lg text-lg transition-colors"
 				>
 					Get Free Estimate
 				</a>
