--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,15 @@ import Hero from '../components/Hero.astro';
 import About from '../components/About.astro';
 import WhyElementSafety from '../components/WhyElementSafety.astro';
 import ServicesOverview from '../components/ServicesOverview.astro';
+import CallToAction from '../components/CallToAction.astro';
+import Expertise from '../components/Expertise.astro';
 ---
 
 <Layout title="Element Safety LLC - Professional Safety Consulting Services">
 	<Hero />
 	<About />
+	<Expertise/>
 	<WhyElementSafety />
 	<ServicesOverview />
+	<CallToAction />	
 </Layout>
