--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -2,7 +2,7 @@
 // About Us component
 ---
 
-<section class="py-20 bg-gray-50">
+<section class="pt-20 bg-gray-50">
 	<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 		<div class="text-center mb-16">
 			<h2 class="text-4xl font-bold text-gray-900 mb-4">About Us</h2>
@@ -31,7 +31,7 @@
 				<h3 class="text-2xl font-bold text-gray-900 mb-4">
 					Innovative Solutions for a Safer Workplace
 				</h3>
-				<p class="text-gray-600 text-left">
+				<p class="text-gray-600 text-center">
 					In today’s industries, safety management is not just about
 					compliance — it’s about performance. Element Safety helps
 					businesses design, implement, and maintain world-class EHS
@@ -74,8 +74,7 @@
 	</div>
 	<div class="bg-blue-700 mt-20 py-6 md:py-8 lg:py-10 text-white">
 		<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-			<div
-				class="flex flex-col md:flex-row justify-around items-start space-y-6 md:space-y-0 text-left"
+			<div class="justify-around items-start space-y-6 md:space-y-0 text-left grid grid-cols-1 gap-4 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4"
 			>
 				<div class="flex items-start space-x-3">
 					<span
