home margins y text center

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -74,9 +74,9 @@
 	</div>
 	<div class="bg-blue-700 mt-20 py-6 md:py-8 lg:py-10 text-white">
 		<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-			<div class="justify-around items-start space-y-6 md:space-y-0 text-left grid grid-cols-1 gap-4 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4"
+			<div class="justify-around items-start space-y-6 md:space-y-0 text-center md:text-left grid grid-cols-1 gap-4 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4"
 			>
-				<div class="flex items-start space-x-3">
+				<div class="flex flex-col items-center space-x-0 space-y-3 md:flex-row md:items-start md:space-x-3 md:space-y-0">
 					<span
 						class="text-3xl mt-1 flex-shrink-0"
 						role="img"
@@ -94,13 +94,13 @@
 								fill="#E8EAED"></path>
 						</svg>
 					</span>
-					<div class="flex flex-col">
+					<div class="flex flex-col items-center md:items-start">
 						<p class="font-bold text-lg">BCSP Certified</p>
 						<p class="text-sm text-blue-200">Quality assured</p>
 					</div>
 				</div>
 
-				<div class="flex items-start space-x-3">
+				<div class="flex flex-col items-center space-x-0 space-y-3 md:flex-row md:items-start md:space-x-3 md:space-y-0">
 					<span
 						class="text-3xl mt-1 flex-shrink-0"
 						role="img"
@@ -118,13 +118,13 @@
 								fill="#E8EAED"></path>
 						</svg>
 					</span>
-					<div class="flex flex-col">
+					<div class="flex flex-col items-center md:items-start">
 						<p class="font-bold text-lg">Quality Professionals</p>
 						<p class="text-sm text-blue-200">Proven track record</p>
 					</div>
 				</div>
 
-				<div class="flex items-start space-x-3">
+				<div class="flex flex-col items-center space-x-0 space-y-3 md:flex-row md:items-start md:space-x-3 md:space-y-0">
 					<span
 						class="text-3xl mt-1 flex-shrink-0"
 						role="img"
@@ -142,13 +142,13 @@
 								fill="#E8EAED"></path>
 						</svg>
 					</span>
-					<div class="flex flex-col">
+					<div class="flex flex-col items-center md:items-start">
 						<p class="font-bold text-lg">X+ Years</p>
 						<p class="text-sm text-blue-200">Industry Experience</p>
 					</div>
 				</div>
 
-				<div class="flex items-start space-x-3">
+				<div class="flex flex-col items-center space-x-0 space-y-3 md:flex-row md:items-start md:space-x-3 md:space-y-0">
 					<span
 						class="text-3xl mt-1 flex-shrink-0"
 						role="img"
@@ -166,7 +166,7 @@
 								fill="#E8EAED"></path>
 						</svg>
 					</span>
-					<div class="flex flex-col">
+					<div class="flex flex-col items-center md:items-start">
 						<p class="font-bold text-lg">More than 20+</p>
 						<p class="text-sm text-blue-200">
 							Enterprises assisted
