feature/initial apply form (monolithic)

--- a/src/pages/testing.astro
+++ b/src/pages/testing.astro
@@ -1,11 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import FormJob from '../components/react/organisms/FormJob.jsx';
+import { Apply } from '../components/react/organisms/Apply';
 ---
 
 <Layout title="Testing Page" description='?'>
     <h1>Testing Page</h1>
     <section>
-        <FormJob client:load/>
+        <!-- <FormJob client:load/> -->
+        <Apply client:load/>
+        
     </section>
 </Layout>
